; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_right_shift.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_right_shift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@nb_rshift = common dso_local global i32 0, align 4
@array_inplace_right_shift = common dso_local global i32 0, align 4
@n_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @array_right_shift to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_right_shift(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @nb_rshift, align 4
  %10 = call i32 @BINOP_GIVE_UP_IF_NEEDED(i32* %7, i32* %8, i32 %9, i32* (i32*, i32*)* @array_right_shift)
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @try_binary_elide(i32* %11, i32* %12, i32* @array_inplace_right_shift, i32** %6, i32 0)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32*, i32** %6, align 8
  store i32* %16, i32** %3, align 8
  br label %22

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @n_ops, i32 0, i32 0), align 4
  %21 = call i32* @PyArray_GenericBinaryFunction(i32* %18, i32* %19, i32 %20)
  store i32* %21, i32** %3, align 8
  br label %22

22:                                               ; preds = %17, %15
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

declare dso_local i32 @BINOP_GIVE_UP_IF_NEEDED(i32*, i32*, i32, i32* (i32*, i32*)*) #1

declare dso_local i64 @try_binary_elide(i32*, i32*, i32*, i32**, i32) #1

declare dso_local i32* @PyArray_GenericBinaryFunction(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
